# enso

./: CHANGELOG.md
.github/workflows/: scala.yml
app/gui/: Cargo.toml
app/gui/controller/double-representation/: Cargo.toml
app/gui/controller/double-representation/src/: graph.rs
app/gui/controller/engine-protocol/: Cargo.toml
app/gui/language/span-tree/src/: iter.rs  node.rs
app/gui/src/controller/: graph.rs  searcher.rs
app/gui/src/controller/ide/: desktop.rs
app/gui/src/executor/: web.rs
app/gui/src/ide/: initializer.rs
app/gui/src/model/module/: plain.rs  synchronized.rs
app/gui/src/model/project/: synchronized.rs
app/gui/src/presenter/: graph.rs  searcher.rs
app/gui/src/presenter/searcher/: provider.rs
app/gui/view/debug_scene/component-group/: Cargo.toml
app/gui/view/graph-editor/: Cargo.toml
app/gui/view/graph-editor/src/: free_place_finder.rs  lib.rs  profiling.rs  selection.rs
app/gui/view/src/: documentation.rs  project.rs  root.rs  searcher.rs
app/ide-desktop/: package-lock.json
integration-test/: Cargo.toml
integration-test/src/: lib.rs
integration-test/tests/: graph_editor.rs
lib/rust/ensogl/doc/: general.md
lib/rust/json-rpc/: Cargo.toml
lib/rust/json-rpc/src/: lib.rs  macros.rs
lib/rust/macro-utils/src/: lib.rs
lib/rust/parser/src/: lexer.rs
lib/rust/profiler/: Cargo.toml
lib/rust/profiler/data/: Cargo.toml
lib/rust/profiler/data/src/: lib.rs  parse.rs
lib/rust/profiler/src/: build.rs  internal.rs  lib.rs
lib/rust/shapely/tests/: derivation.rs
test/Tests/src/Data/: Array_Spec.enso
(+58 files in other folders)
