[package]
name = "enso-profiler-data"
version = "0.1.0"
edition = "2021"
authors = ["Enso Team <contact@enso.org>"]

[dependencies]
chrono = { version = "0.4.19" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enso-prelude = { path = "../../prelude" }
enso-profiler = { path = "../" }

[dev-dependencies]
futures = "0.3"
